EDM Version 1-10-1zd The Makefile has been modified to be more native for EPICS R3.14 builds. The modifications have been made for Linux only.

--- a/lib/Makefile.Host
+++ b/lib/Makefile.Host
@@ -6,7 +6,7 @@ HOST_OPT=NO
 
 # If you want support accessing files via http and curl
 # then set USE_CURL=YES
-USE_CURL=NO
+USE_CURL=YES
 
 ifeq ($(USE_CURL), YES)
 	USR_CXXFLAGS_Linux += -Wall -DUSECURL -D__linux__ -D_BSD_SOURCE -DSINGLE_THREADED=1 -D__epics__=1
