--- a/pvlib/Makefile
+++ b/pvlib/Makefile
@@ -5,6 +5,11 @@ ifdef EPICS_HOST_ARCH
    USR_CXXFLAGS_Linux += -DSINGLE_THREADED=1 -D__epics__=1
    # Add Debugging
    #USR_CXXFLAGS_Linux += -g -O0
+
+   INSTALL_INCLUDE = $(TOP)/include/edm
+   INC += pv.h
+   INC += epicsPv.h
+
    Epics_LIBS_Linux += cfcaa62e-8199-11d3-a77f-00104b8742df
    Epics_SYS_LIBS_Linux += pthread dl
 
@@ -20,7 +25,9 @@ ifdef EPICS_HOST_ARCH
 
    PROD_LIBS += ca Com
 
-   USR_INCLUDES = -I../ -I../../lib
+   USR_INCLUDES = -I../ 
+   USR_INCLUDES += -I$(TOP)/include/edm -I../../lib
+
 
    LIB_SRCS += reg_pvs.cc
    LIB_SRCS += epicsPv.cc
