--- a/pvlib/Makefile
+++ b/pvlib/Makefile
@@ -3,6 +3,7 @@ ifdef EPICS_HOST_ARCH
   include $(TOP)/configure/CONFIG
 
    USR_CXXFLAGS_Linux += -DSINGLE_THREADED=1 -D__epics__=1
+   USR_CXXFLAGS_Darwin += -DSINGLE_THREADED=1 -D__epics__=1
    # Add Debugging
    #USR_CXXFLAGS_Linux += -g -O0
 
@@ -12,6 +13,9 @@ ifdef EPICS_HOST_ARCH
 
    Epics_LIBS_Linux += cfcaa62e-8199-11d3-a77f-00104b8742df
    Epics_SYS_LIBS_Linux += pthread dl
+   
+   Epics_LIBS_Darwin += cfcaa62e-8199-11d3-a77f-00104b8742df
+   Epics_SYS_LIBS_Darwin += pthread dl
 
    USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
    USR_LIBS_solaris = cfcaa62e-8199-11d3-a77f-00104b8742df pthread dl
