--- a/baselib/Makefile
+++ b/baselib/Makefile
@@ -5,9 +5,14 @@ ifdef EPICS_HOST_ARCH
    USR_CXXFLAGS_Linux += -DSINGLE_THREADED=1 -D__epics__=1
    # Add Debugging
    #USR_CXXFLAGS_Linux += -g -O0
+   
+   USR_CXXFLAGS_Darwin += -DSINGLE_THREADED=1 -D__epics__=1
 
    EdmBase_LIBS_Linux += cfcaa62e-8199-11d3-a77f-00104b8742df 
    EdmBase_SYS_LIBS_Linux += Xm Xt Xp Xtst X11 pthread dl
+
+   EdmBase_LIBS_Darwin += cfcaa62e-8199-11d3-a77f-00104b8742df 
+   EdmBase_SYS_LIBS_Darwin += Xm Xt Xp Xtst X11 pthread dl
 
    USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
    USR_LIBS_solaris = cfcaa62e-8199-11d3-a77f-00104b8742df Xm Xt Xmu X11 Xext pthread dl rt
