--- a/edmMain/Makefile
+++ b/edmMain/Makefile
@@ -3,11 +3,16 @@ ifdef EPICS_HOST_ARCH
   include $(TOP)/configure/CONFIG
 
    USR_CXXFLAGS_Linux += -DSINGLE_THREADED=1 -D__epics__=1
+   USR_CXXFLAGS_Darwin += -DSINGLE_THREADED=1 -D__epics__=1
    # Add Debugging
    #USR_CXXFLAGS_Linux += -g -O0
    edm_LIBS_Linux += EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df 
    edm_LIBS_Linux += 114135a4-6f6c-11d3-95bc-00104b8742df
    edm_SYS_LIBS_Linux += Xm Xmu Xt Xp Xtst X11 pthread dl
+   
+   edm_LIBS_Darwin += EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df 
+   edm_LIBS_Darwin += 114135a4-6f6c-11d3-95bc-00104b8742df
+   edm_SYS_LIBS_Darwin += Xm Xmu Xt Xp Xtst X11 pthread dl
    
    USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
    USR_LIBS_solaris = EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df 114135a4-6f6c-11d3-95bc-00104b8742df Xm Xt Xmu X11 Xext pthread dl rt
