Makefiles for Version 1-11-0

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -73,6 +73,8 @@ ifdef EPICS_HOST_ARCH
   INC += undo.h
   INC += utility.h
   INC += path_list.h
+  INC += crawler.h
+  INC += lookup.h
 
   USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
   USR_LIBS_solaris = Xm Xt Xmu X11 Xext pthread dl rt
@@ -158,6 +160,8 @@ ifdef EPICS_HOST_ARCH
   LIB_SRCS += scrolledWAcceleratorSupport.c
   LIB_SRCS += postfix.c
   LIB_SRCS += path_list.cc
+  LIB_SRCS += crawler.cc
+  LIB_SRCS += lookup.cc
 
   include $(TOP)/configure/RULES
 
