changes to Makefile to support Solaris 2.9 in a R3.14.x environment

--- a/choiceButton/Makefile
+++ b/choiceButton/Makefile
@@ -12,11 +12,13 @@ ifdef EPICS_HOST_ARCH
    
    7e1b4e6f-239d-4650-95e6-a040d41ba633_LIBS_Darwin += EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df
    7e1b4e6f-239d-4650-95e6-a040d41ba633_SYS_LIBS_Darwin += Xm Xt Xp Xtst X11 pthread dl
-   
-   
-   USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
-   USR_LIBS_solaris = EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df Xm Xt Xmu X11 Xext pthread dl rt
 
+
+   USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
+   
+   7e1b4e6f-239d-4650-95e6-a040d41ba633_LIBS_solaris += EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df
+   7e1b4e6f-239d-4650-95e6-a040d41ba633_SYS_LIBS_solaris += Xm Xt Xmu X11 Xext pthread dl rt 
+   
    USR_CXXFLAGS_hpux11_11_mt += -DHP_UX=1111 -DSINGLE_THREADED=1 -D__epics__=1
    USR_LIBS_hpux11_11_mt = cfcaa62e-8199-11d3-a77f-00104b8742df pthread
    
@@ -56,8 +58,6 @@ ifdef EPICS_HOST_ARCH
    LIB_SRCS += choice_button.cc
    LIB_SRCS += reg_lib7e1b4e6f-239d-4650-95e6-a040d41ba633.cc
    
-   
-
    include $(TOP)/configure/RULES
    
 else
