--- a/edmMain/Makefile
+++ b/edmMain/Makefile
@@ -4,6 +4,8 @@ ifdef EPICS_HOST_ARCH
 
    USR_CXXFLAGS_Linux += -DSINGLE_THREADED=1 -D__epics__=1
    USR_CXXFLAGS_Darwin += -DSINGLE_THREADED=1 -D__epics__=1
+   USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
+
    # Add Debugging
    #USR_CXXFLAGS_Linux += -g -O0
    edm_LIBS_Linux += EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df 
@@ -13,9 +15,10 @@ ifdef EPICS_HOST_ARCH
    edm_LIBS_Darwin += EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df 
    edm_LIBS_Darwin += 114135a4-6f6c-11d3-95bc-00104b8742df
    edm_SYS_LIBS_Darwin += Xm Xmu Xt Xp Xtst X11 pthread dl
-   
-   USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
-   USR_LIBS_solaris = EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df 114135a4-6f6c-11d3-95bc-00104b8742df Xm Xt Xmu X11 Xext pthread dl rt
+
+   edm_LIBS_solaris += EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df 
+   edm_LIBS_solaris += 114135a4-6f6c-11d3-95bc-00104b8742df
+   edm_SYS_LIBS_solaris += Xm Xt Xmu X11 Xext pthread dl rt socket nsl
 
    USR_CXXFLAGS_hpux11_11_mt += -DHP_UX=1111 -DSINGLE_THREADED=1 -D__epics__=1
    USR_LIBS_hpux11_11_mt = EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df 114135a4-6f6c-11d3-95bc-00104b8742df Xm Xt Xmu X11 Xext pthread
@@ -51,7 +54,7 @@ ifdef EPICS_HOST_ARCH
    HCLXmu_DIR = $(X11_LIB)
    
    edm_SRCS += main.cc
-   
+
    include $(TOP)/configure/RULES
    
 else
