--- a/pvFactory/Makefile
+++ b/pvFactory/Makefile
@@ -5,25 +5,22 @@ ifdef EPICS_HOST_ARCH
    USR_CXXFLAGS_Linux += -DSINGLE_THREADED=1 -D__epics__=1
    USR_CFLAGS_Linux = $(USR_CXXFLAGS_Linux)
 
-   #USR_CXXFLAGS_Darwin += -DSINGLE_THREADED=1 -D__epics__=1
+   
    USR_CXXFLAGS_Darwin += -DSINGLE_THREADED=1 -D__epics__=1
    USR_CFLAGS_Darwin = $(USR_CXXFLAGS_Darwin)
    
+   USR_CXXFLAGS_solaris += -DSINGLE_THREADED=1 -D__epics__=1
+   USR_CFLAGS_solaris = $(USR_CXXFLAGS_solaris)
    
-   # Add Debugging
-   #USR_CXXFLAGS_Linux += -g -O0
-   
-
-   USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
-   USR_LIBS_solaris = cfcaa62e-8199-11d3-a77f-00104b8742df pthread dl
 
    USR_CXXFLAGS_hpux11_11_mt += -DHP_UX=1111 -DSINGLE_THREADED=1 -D__epics__=1
    USR_LIBS_hpux11_11_mt = cfcaa62e-8199-11d3-a77f-00104b8742df pthread
 
    USR_LDFLAGS += -L$(INSTALL_LIB)
 
-   #USR_INCLUDES += -I$(MOTIF_INC) -I$(X11_INC)
-   USR_INCLUDES += -I/usr/X11R6/include/Xm -I/usr/X11R6/include
+   USR_INCLUDES += -I$(MOTIF_INC) -I$(X11_INC)
+
+  # USR_INCLUDES += -I/usr/X11R6/include/Xm -I/usr/X11R6/include
 
 
    Xm_DIR =   $(MOTIF_LIB)
@@ -59,7 +56,6 @@ ifdef EPICS_HOST_ARCH
    LIB_SRCS   += regTextupdate.cc
    LIB_SRCS   += byte.cc
    LIB_SRCS   += pv_register.cc
-   
    
   include $(TOP)/configure/RULES
    
