--- a/pvlib/Makefile
+++ b/pvlib/Makefile
@@ -4,8 +4,8 @@ ifdef EPICS_HOST_ARCH
 
    USR_CXXFLAGS_Linux += -DSINGLE_THREADED=1 -D__epics__=1
    USR_CXXFLAGS_Darwin += -DSINGLE_THREADED=1 -D__epics__=1
-   # Add Debugging
-   #USR_CXXFLAGS_Linux += -g -O0
+   USR_CXXFLAGS_Darwin += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
+
 
    INSTALL_INCLUDE = $(TOP)/include/edm
    INC += pv.h
@@ -17,9 +17,9 @@ ifdef EPICS_HOST_ARCH
    Epics_LIBS_Darwin += cfcaa62e-8199-11d3-a77f-00104b8742df
    Epics_SYS_LIBS_Darwin += pthread dl
 
-   USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
-   USR_LIBS_solaris = cfcaa62e-8199-11d3-a77f-00104b8742df pthread dl
-
+   Epics_LIBS_solaris += cfcaa62e-8199-11d3-a77f-00104b8742df
+   Epics_SYS_LIBS_solaris += pthread dl 
+   
    USR_CXXFLAGS_hpux11_11_mt += -DHP_UX=1111 -DSINGLE_THREADED=1 -D__epics__=1
    USR_LIBS_hpux11_11_mt = cfcaa62e-8199-11d3-a77f-00104b8742df pthread
 
@@ -36,7 +36,7 @@ ifdef EPICS_HOST_ARCH
    LIB_SRCS += reg_pvs.cc
    LIB_SRCS += epicsPv.cc
    LIB_SRCS += pv.cc
-   
+  
   include $(TOP)/configure/RULES
    
 else
