--- a/choiceButton/Makefile
+++ b/choiceButton/Makefile
@@ -2,39 +2,29 @@ TOP = ../../..
 ifdef EPICS_HOST_ARCH
   include $(TOP)/configure/CONFIG
    
-   
+   SHARED_LIBRARIES = YES
+
+   USR_LIBS += 114135a4-6f6c-11d3-95bc-00104b8742df
+   USR_LIBS += EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df
+
    USR_CXXFLAGS_Linux += -DSINGLE_THREADED=1 -D__epics__=1
-   
-   7e1b4e6f-239d-4650-95e6-a040d41ba633_LIBS_Linux += EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df
-   7e1b4e6f-239d-4650-95e6-a040d41ba633_SYS_LIBS_Linux += Xm Xt Xp Xtst X11 pthread dl
+   USR_LIBS_Linux += Xm Xt Xp Xtst X11
+   USR_SYS_LIBS_Linux += pthread dl
    
    USR_CXXFLAGS_Darwin += -DSINGLE_THREADED=1 -D__epics__=1
-   
-   7e1b4e6f-239d-4650-95e6-a040d41ba633_LIBS_Darwin += EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df
-   7e1b4e6f-239d-4650-95e6-a040d41ba633_SYS_LIBS_Darwin += Xm Xt Xp Xtst X11 pthread dl
-
+   USR_LIBS_Darwin += Xm Xt Xp Xtst X11
+   USR_SYS_LIBS_Darwin += pthread dl
 
    USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
-   
-   7e1b4e6f-239d-4650-95e6-a040d41ba633_LIBS_solaris += EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df
-   7e1b4e6f-239d-4650-95e6-a040d41ba633_SYS_LIBS_solaris += Xm Xt Xmu X11 Xext pthread dl rt 
+   USR_LIBS_solaris += Xm Xt X11
    
    USR_CXXFLAGS_hpux11_11_mt += -DHP_UX=1111 -DSINGLE_THREADED=1 -D__epics__=1
-   USR_LIBS_hpux11_11_mt = cfcaa62e-8199-11d3-a77f-00104b8742df pthread
-   
-   
-   
-   USR_LDFLAGS += -L$(INSTALL_LIB)
-   7e1b4e6f-239d-4650-95e6-a040d41ba633_LDFLAGS += -L$(MOTIF_LIB) -L$(X11_LIB)
+   USR_SYS_LIBS_hpux11_11_mt = pthread
    
    LIBRARY = 7e1b4e6f-239d-4650-95e6-a040d41ba633
 
-   PROD_LIBS += ca Com
-
-    USR_INCLUDES = -I../
-    USR_INCLUDES += -I$(TOP)/include/edm -I../../util -I../../lib -I../../pvlib
-
-   USR_INCLUDES += -I$(MOTIF_INC) -I$(X11_INC)
+   INSTALL_INCLUDE = $(INSTALL_LOCATION)/include/edm
+   USR_INCLUDES += -I../../util -I../../lib -I../../pvlib
 
    Xm_DIR =   $(MOTIF_LIB)
    Xt_DIR =   $(X11_LIB)
